<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OHIPSwipe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<string name="info">Swipe or Type your Health Card</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">clear</string>
    <string name="delete">delete</string>
    <string name="go">Go</string>
    <string name="token">Your token number</string>
    <string name="waitTime">approximately wait time\nto register desk 10 minutes </string>
</resources>
