<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ohipActivity">

    <TextView
        android:text="@string/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="22dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        style="@style/CalculatorButton"
        android:text="@string/go"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />
    <TableLayout
        android:id="@+id/standard_functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:stretchColumns="*"
        android:layout_below="@+id/delete">

        <TableRow
            android:id="@+id/tableRow0"
            style="@style/TableRowBackground"
            android:layout_width="match_parent" >

            <Button
                android:id="@+id/seven"
                style="@style/CalculatorButton"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                style="@style/CalculatorButton"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                style="@style/CalculatorButton"
                android:text="@string/nine" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            style="@style/TableRowBackground"
            android:layout_width="match_parent" >

            <Button
                android:id="@+id/four"
                style="@style/CalculatorButton"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                style="@style/CalculatorButton"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                style="@style/CalculatorButton"
                android:text="@string/six" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            style="@style/TableRowBackground"
            android:layout_width="match_parent" >

            <Button
                android:id="@+id/one"
                style="@style/CalculatorButton"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                style="@style/CalculatorButton"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                style="@style/CalculatorButton"
                android:text="@string/three" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            style="@style/TableRowBackground"
            android:layout_width="match_parent" >



            <Button
                android:id="@+id/zero"
                style="@style/CalculatorButton"
                android:text="@string/zero" />

            <Button
                android:id="@+id/equalsto"
                style="@style/CalculatorButton"
                android:text="@string/clear" />

            <Button
                android:id="@+id/plus"
                style="@style/CalculatorButton"
                android:text="@string/delete" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/token"
        android:layout_below="@+id/standard_functions"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="1"
        android:textSize="150dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAlignment="center" />

</RelativeLayout>
